--- a/public/scss/components/_buttons.scss
+++ b/public/scss/components/_buttons.scss
@@ -1,4 +1,4 @@
-#button {
+.button {
   background: #fcd703;
   background-image: -webkit-linear-gradient(top, #fcd703, #e6c50c);
   background-image: -moz-linear-gradient(top, #fcd703, #e6c50c);
@@ -9,13 +9,13 @@
   -moz-border-radius: 28;
   border-radius: 28px;
   font-family: Arial;
-  color: #02D9D9;
+  color: $text-dark;
   font-size: 26px;
   padding: 20px 40px 20px 40px;
   text-decoration: none;
 }
 
-#button:hover {
+.button:hover {
   background: #f7e891;
   background-image: -webkit-linear-gradient(top, #f7e891, #fae257);
   background-image: -moz-linear-gradient(top, #f7e891, #fae257);
