--- a/public/scss/layout/_header.scss
+++ b/public/scss/layout/_header.scss
@@ -1,10 +1,10 @@
-#header-content {
+.header-content {
   position: relative;
   flex-wrap: wrap;
   width: 100vw;
 }
 
-#header-content ul {
+.header-content ul {
   top: 0;
   left: 0;
   right: 0;
@@ -13,28 +13,21 @@
   justify-content: flex-end;
 }
 
-#header-content li {
-  font-family: Courier;
-  font-weight: bolder;
-  color: #02D9D9;
+.header-content li {
   display: inline-flex;
   justify-content: space-around;
   padding-right: 4vw;
 }
 
-#header-content li:hover {
+.header-content li:hover {
 color: #FFFFFF;
 cursor: pointer; cursor: hand;
 }
 
-#header-content li:first-child {
-  font-weight: normal;
-  justify-content: center;
-  font-size: 32px;
-  width: 30vw;
+.header-content li:first-child {
   cursor: default;
 }
 
-#header-content li:first-child:hover {
+.header-content li:first-child:hover {
   color: #D910E8;
 }
