--- a/public/scss/layout/_flex-inventory.scss
+++ b/public/scss/layout/_flex-inventory.scss
@@ -118,9 +118,20 @@ img[rel="conversion"] {
 .mid2 {
     position: relative;
     width: 100%;
+    height: 30vh;
+    bottom: 15vh;
+    left: 46vw;
 }
 
 .mid2 h1 {
   height: 11vh;
   background-color:$color-back;
+}
+
+.mid3 {
+  position: relative;
+  width: 100%;
+  height: 10vh;
+  bottom: 10vh;
+  left: 30vw;
 }
