--- a/public/scss/layout/_flex-inventory.scss
+++ b/public/scss/layout/_flex-inventory.scss
@@ -58,10 +58,6 @@ html, body, .container {
         margin: 0;
       }
 
-body{
-background-color: $color-back;
-}
-
 .container {
   display: flex;
   height: 100vh;
@@ -80,6 +76,14 @@ img[rel="main"] {
 
 .container > * {
   flex: 1 1 auto;
+}
+
+.mid1 {
+    position: relative;
+    width: 100%;
+    align-items: flex-end;
+    margin-top: auto;
+    display:flex;
 }
 
 .partial-container {
@@ -118,6 +122,11 @@ img[rel="conversion"] {
 .mid2 {
     position: relative;
     width: 100%;
+}
+
+.mid2.mid-inventory {
+    position: relative;
+    width: 100%;
     height: 30vh;
     bottom: 15vh;
     left: 46vw;
@@ -130,8 +139,154 @@ img[rel="conversion"] {
 
 .mid3 {
   position: relative;
+  display: flex;
   width: 100%;
-  height: 10vh;
+  height: 15vh;
   bottom: 10vh;
-  left: 30vw;
+}
+
+.mid3.flex-inventory {
+  position: relative;
+  width: 100%;
+  align-items: center;
+  justify-content: center;
+}
+
+form {
+  position: relative;
+  display: flex;
+  width: 40vw;
+  left: 50vw;
+  bottom: 10vh;
+}
+
+form.buildform {
+  height: 3vh;
+  display:flex;
+  width: 60vw;
+  left:16.25vw;
+  bottom: 40vh;
+}
+
+form.recipe-entry{
+  width: 50vw;
+  height: 30vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  bottom: 50vh;
+  left: 0;
+}
+
+/*////////////////////BEGIN GALLERY PAGE/////////////////////*/
+
+.container2 {
+  display: flex;
+  height: 100vh;
+  position: relative;
+  margin: 0 auto;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-items: stretch;
+  justify-content: space-between;
+}
+
+.container2 > * {
+  flex: 1 1 auto;
+}
+
+.topbar {
+  flex-wrap: wrap;
+  width: 100vw;
+  height: 10vh;
+  background-color: $color-prim;
+}
+
+.galleryrow {
+  display: flex;
+
+}
+
+img[rel="img1"] {
+  width: 50vw;
+  height: 50vh;
+  -webkit-transition: all 1s ease;
+     -moz-transition: all 1s ease;
+       -o-transition: all 1s ease;
+      -ms-transition: all 1s ease;
+          transition: all 1s ease;
+}
+
+img[rel="img1"]:hover {
+  -webkit-filter: grayscale(100%);
+}
+
+img[rel="img2"] {
+  width: 25vw;
+  height: 50vh;
+  -webkit-transition: all 500ms ease-in-out;
+     -moz-transition: all 500ms ease-in-out;
+       -o-transition: all 500ms ease-in-out;
+      -ms-transition: all 500ms ease-in-out;
+          transition: all 500ms ease-in-out;
+}
+
+img[rel="img2"]:hover {
+  -webkit-filter: grayscale(100%);
+}
+
+img[rel="img3"] {
+  width: 25vw;
+  height: 50vh;
+  -webkit-transition: all 500ms ease-in-out;
+     -moz-transition: all 500ms ease-in-out;
+       -o-transition: all 500ms ease-in-out;
+      -ms-transition: all 500ms ease-in-out;
+          transition: all 500ms ease-in-out;
+}
+
+img[rel="img3"]:hover {
+  -webkit-filter: grayscale(100%);
+}
+
+img[rel="img4"] {
+  width: 25vw;
+  height: 50vh;
+  -webkit-transition: all 500ms ease-in-out;
+     -moz-transition: all 500ms ease-in-out;
+       -o-transition: all 500ms ease-in-out;
+      -ms-transition: all 500ms ease-in-out;
+          transition: all 500ms ease-in-out;
+}
+
+img[rel="img4"]:hover {
+  -webkit-filter: grayscale(100%);
+}
+
+img[rel="img5"] {
+  width: 25vw;
+  height: 50vh;
+  -webkit-transition: all 500ms ease-in-out;
+     -moz-transition: all 500ms ease-in-out;
+       -o-transition: all 500ms ease-in-out;
+      -ms-transition: all 500ms ease-in-out;
+          transition: all 500ms ease-in-out;
+}
+
+img[rel="img5"]:hover {
+  -webkit-filter: grayscale(100%);
+}
+
+img[rel="img6"] {
+  width: 50vw;
+  height: 50vh;
+  -webkit-transition: all 500ms ease-in-out;
+     -moz-transition: all 500ms ease-in-out;
+       -o-transition: all 500ms ease-in-out;
+      -ms-transition: all 500ms ease-in-out;
+          transition: all 500ms ease-in-out;
+}
+
+img[rel="img6"]:hover {
+  -webkit-filter: grayscale(100%);
 }
