--- a/public/css/application.css
+++ b/public/css/application.css
@@ -262,7 +262,7 @@ td {
   font: 67.5% "Lucida Sans Unicode", "Bitstream Vera Sans", "Trebuchet Unicode MS", "Lucida Grande", Verdana, Helvetica, sans-serif;
   font-size: 14px;
   font-weight: bold;
-  width: 8vw;
+  width: 100%;
   bottom: 10vw; }
 
 .small {
@@ -358,6 +358,9 @@ td {
   -moz-box-shadow: inset 0px 0px 7px 2px rgba(0, 0, 0, 0.3);
   box-shadow: inset 0px 0px 7px 2px rgba(0, 0, 0, 0.3); }
 
+.rec-list-btn {
+  width: 10vw; }
+
 form {
   position: relative;
   display: flex;
@@ -369,7 +372,7 @@ form {
   position: relative;
   height: 50vh;
   display: flex;
-  width: 30vw;
+  width: 50vw;
   align-items: center;
   justify-content: center;
   left: 20vw;
@@ -423,6 +426,13 @@ form.drink-number {
   align-self: center;
   width: 20vw;
   height: 10vh; }
+
+.lg-text-box {
+  position: relative;
+  display: flex;
+  align-self: center;
+  width: 40vw;
+  height: 20vh; }
 
 .btn {
   background: #ff9933;
