--- a/public/css/application.css
+++ b/public/css/application.css
@@ -210,7 +210,8 @@ td {
   right: 0;
   bottom: 0;
   list-style-type: none;
-  justify-content: flex-end; }
+  justify-content: flex-end;
+  text-decoration: none; }
 
 .landing-ul {
   padding-left: 60vw;
@@ -523,7 +524,7 @@ li {
   font-weight: normal;
   justify-content: center;
   font-size: 46px;
-  width: 30vw;
+  width: 10vw;
   font-family: "Sacramento", cursive;
   padding-left: 5vw;
   padding-right: 60vw; }
@@ -535,6 +536,18 @@ li {
   width: 30vw;
   font-family: "Sacramento", cursive;
   padding-left: 5vw; }
+
+.two {
+  font-weight: normal;
+  justify-content: center;
+  font-size: 32px;
+  width: 5vw;
+  font-family: "Sacramento", cursive;
+  padding-left: 5vw;
+  text-decoration: none; }
+
+a:link {
+  text-decoration: none; }
 
 .center-inflex {
   display: flex;
