--- a/public/scss/components/_typography.scss
+++ b/public/scss/components/_typography.scss
@@ -76,6 +76,15 @@ padding-left: 5vw;
   text-decoration: none;
 }
 
+.three {
+  font-weight: normal;
+  font-size: 28px;
+  width: 20vw;
+  font-family: $font-prim;
+  padding-right: 50vw;
+  text-decoration: none;
+}
+
 a:link {
     text-decoration: none;
 }
