--- a/public/scss/layout/_footer.scss
+++ b/public/scss/layout/_footer.scss
@@ -32,3 +32,12 @@
 color: #FFFFFF;
 cursor: pointer; cursor: hand;
 }
+
+.footer-tall {
+  height: 6.5vh;
+}
+
+.footer-left {
+  right: 21vw;
+  top:11vh;
+}
