--- a/public/css/application.css
+++ b/public/css/application.css
@@ -199,6 +199,13 @@ td {
   cursor: pointer;
   cursor: hand; }
 
+.footer-tall {
+  height: 6.5vh; }
+
+.footer-left {
+  right: 21vw;
+  top: 11vh; }
+
 .header-content {
   position: relative;
   flex-wrap: wrap;
@@ -260,6 +267,7 @@ td {
   border: 0px;
   margin: 0px;
   padding: 0px;
+  padding-bottom: 1vh;
   font: 67.5% "Lucida Sans Unicode", "Bitstream Vera Sans", "Trebuchet Unicode MS", "Lucida Grande", Verdana, Helvetica, sans-serif;
   font-size: 14px;
   font-weight: bold;
@@ -376,8 +384,8 @@ form {
   width: 50vw;
   align-items: center;
   justify-content: center;
-  left: 20vw;
-  bottom: 15vh; }
+  right: 90vw;
+  top: 20vh; }
 
 label {
   position: relative;
@@ -544,6 +552,14 @@ li {
   width: 5vw;
   font-family: "Sacramento", cursive;
   padding-left: 5vw;
+  text-decoration: none; }
+
+.three {
+  font-weight: normal;
+  font-size: 28px;
+  width: 20vw;
+  font-family: "Sacramento", cursive;
+  padding-right: 50vw;
   text-decoration: none; }
 
 a:link {
