--- a/public/scss/components/_buttons.scss
+++ b/public/scss/components/_buttons.scss
@@ -35,6 +35,7 @@
   border: 0px;
   margin: 0px;
   padding: 0px;
+  padding-bottom: 1vh;
   font: 67.5% "Lucida Sans Unicode", "Bitstream Vera Sans", "Trebuchet Unicode MS", "Lucida Grande", Verdana, Helvetica, sans-serif;
   font-size: 14px;
   font-weight: bold;
@@ -160,8 +161,8 @@ form {
   width: 50vw;
   align-items: center;
   justify-content: center;
-  left: 20vw;
-  bottom: 15vh;
+  right: 90vw;
+  top: 20vh;
 }
 
 label {
